--- a/AutoBlogCreator/appsettings.json
+++ b/AutoBlogCreator/appsettings.json
@@ -11,7 +11,7 @@
     "RemoteUrl": "https://github.com/proxna/newsletter-gaming.git",
     "UserName": "proxna",
     "UserEmail": "pawel.gajzler.pg@gmail.com",
-    "Password": "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"
+    "Password": ""
   },
   "AllowedHosts": "*"
 }
