--- a/AutoBlogCreator/appsettings.json
+++ b/AutoBlogCreator/appsettings.json
@@ -7,11 +7,11 @@
   },
   "ApiKey": "59210804-6B42-440F-B882-84F82EE8A1C6",
   "RepositoryInfo": {
-    "LocalPath": "C:\\Users\\admin\\Documents\\newsletter-gaming",
-    "RemoteUrl": "https://github.com/proxna/newsletter-gaming.git",
+    "LocalPath": "C:\\Users\\Gajzl\\OneDrive\\Dokumenty\\repos\\newsreviewai",
+    "RemoteUrl": "https://github.com/proxna/newsreviewai.git",
     "UserName": "proxna",
     "UserEmail": "pawel.gajzler.pg@gmail.com",
-    "Password": ""
+    "Password": "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"
   },
   "AllowedHosts": "*"
 }
